--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
@@ -45,6 +45,8 @@
     <Compile Include="AreaConverter.cs" />
     <Compile Include="AreaUnits.cs" />
     <Compile Include="Converter.cs" />
+    <Compile Include="LengthConverter.cs" />
+    <Compile Include="LengthUnits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemperatureConverter.cs" />
     <Compile Include="TemperatureUnits.cs" />
