--- a/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
@@ -51,6 +51,7 @@
     <Compile Include="Converters\TemperatureTest.cs" />
     <Compile Include="Converters\TimeTest.cs" />
     <Compile Include="Converters\AreaTest.cs" />
+    <Compile Include="Converters\LengthTest.cs" />
     <Compile Include="Expressions\Logics\AndTest.cs" />
     <Compile Include="Expressions\Logics\EqualityTest.cs" />
     <Compile Include="Expressions\Logics\ImplicationTest.cs" />
