--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
@@ -47,6 +47,8 @@
     <Compile Include="Converter.cs" />
     <Compile Include="LengthConverter.cs" />
     <Compile Include="LengthUnits.cs" />
+    <Compile Include="MassConverter.cs" />
+    <Compile Include="MassUnits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemperatureConverter.cs" />
     <Compile Include="TemperatureUnits.cs" />
