--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -47,7 +47,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Func.cs" />
+    <Compile Include="..\Func.cs" />
     <Compile Include="Expressions\Ceil.cs" />
     <Compile Include="Expressions\Floor.cs" />
     <Compile Include="Expressions\DelegateExpression.cs" />
