--- a/xFunc.Logics/xFunc.Logics (.Net 3.0).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 3.0).csproj
@@ -44,10 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedCode\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="EnumerableExtention.cs" />
+    <Compile Include="EnumerableExtension.cs" />
     <Compile Include="LogicLexerException.cs" />
     <Compile Include="LogicParserException.cs" />
     <Compile Include="Expressions\And.cs" />
@@ -78,7 +78,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="StringExtention.cs" />
+    <Compile Include="StringExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Resource.uk.resx">
