--- a/xFunc.Logics/xFunc.Logics (.Net 4.5.1).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 4.5.1).csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedCode\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="LogicLexerException.cs" />
