--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 2.0).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 2.0).csproj
@@ -46,10 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedCode\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="..\Func.cs" />
+    <Compile Include="..\SharedCode\Func.cs" />
+    <Compile Include="..\SharedCode\Lazy.cs" />
     <Compile Include="AreaConverter.cs" />
     <Compile Include="AreaUnits.cs" />
     <Compile Include="Converter.cs" />
