--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 3.5).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 3.5).csproj
@@ -46,9 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
+    <Compile Include="..\SharedCode\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\SharedCode\Lazy.cs" />
     <Compile Include="AreaConverter.cs" />
     <Compile Include="AreaUnits.cs" />
     <Compile Include="Converter.cs" />
