--- a/xFunc.Logics/xFunc.Logics (.Net 3.5).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 3.5).csproj
@@ -79,6 +79,16 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Resources\Resource.ru.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.ru.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Resource.uk.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.uk.resx</DependentUpon>
+    </Compile>
     <Compile Include="StringExtension.cs" />
   </ItemGroup>
   <ItemGroup>
