--- a/xFunc.Test/xFunc.Tests (.Net 2.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 2.0).csproj
@@ -35,11 +35,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -47,6 +42,13 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\TemperatureTest.cs" />
+    <Compile Include="Converters\TimeTest.cs" />
+    <Compile Include="Converters\AreaTest.cs" />
+    <Compile Include="Converters\LengthTest.cs" />
+    <Compile Include="Converters\MassTest.cs" />
+    <Compile Include="Converters\PowerTest.cs" />
+    <Compile Include="Converters\VolumeTest.cs" />
     <Compile Include="Expressions\Logics\AndTest.cs" />
     <Compile Include="Expressions\Logics\EqualityTest.cs" />
     <Compile Include="Expressions\Logics\ImplicationTest.cs" />
@@ -145,6 +147,10 @@
     <ProjectReference Include="..\xFunc.Maths\xFunc.Maths %28.Net 2.0%29.csproj">
       <Project>{91ad4fbf-d01a-4bd3-b3e9-caf885cc208c}</Project>
       <Name>xFunc.Maths</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\xFunc.UnitConverters\xFunc.UnitConverters %28.Net 2.0%29.csproj">
+      <Project>{2ecaad28-e0ce-40be-8eb0-0d055c908133}</Project>
+      <Name>xFunc.UnitConverters %28.Net 2.0%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
