--- a/xFunc.Test/xFunc.Tests (.Net 4.5).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.5).csproj
@@ -38,11 +38,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -50,6 +45,13 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\TemperatureTest.cs" />
+    <Compile Include="Converters\TimeTest.cs" />
+    <Compile Include="Converters\AreaTest.cs" />
+    <Compile Include="Converters\LengthTest.cs" />
+    <Compile Include="Converters\MassTest.cs" />
+    <Compile Include="Converters\PowerTest.cs" />
+    <Compile Include="Converters\VolumeTest.cs" />
     <Compile Include="Expressions\Logics\AndTest.cs" />
     <Compile Include="Expressions\Logics\EqualityTest.cs" />
     <Compile Include="Expressions\Logics\ImplicationTest.cs" />
@@ -143,11 +145,15 @@
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28.Net 4.5%29.csproj">
       <Project>{dfc61417-f3cc-47d5-b2de-4029be939a4c}</Project>
-      <Name>xFunc.Logics</Name>
+      <Name>xFunc.Logics %28.Net 4.5%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\xFunc.Maths\xFunc.Maths %28.Net 4.5%29.csproj">
       <Project>{91ad4fbf-d01a-4bd3-b3e9-caf885cc208c}</Project>
-      <Name>xFunc.Maths</Name>
+      <Name>xFunc.Maths %28.Net 4.5%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\xFunc.UnitConverters\xFunc.UnitConverters %28.Net 4.0%29.csproj">
+      <Project>{2ecaad28-e0ce-40be-8eb0-0d055c908133}</Project>
+      <Name>xFunc.UnitConverters %28.Net 4.5%29</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
