--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -52,6 +52,9 @@
             <setting name="SelectedTabIndex" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="AngleMeasurement" serializeAs="String">
+                <value>Degree</value>
+            </setting>
             <setting name="MaxCountOfExpressions" serializeAs="String">
                 <value>20</value>
             </setting>
@@ -60,6 +63,9 @@
             </setting>
             <setting name="AdditionalLogicExpanded" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="NumberBase" serializeAs="String">
+                <value>Decimal</value>
             </setting>
             <setting name="CheckUpdates" serializeAs="String">
                 <value>True</value>
@@ -102,6 +108,15 @@
             </setting>
             <setting name="ProgExpanded" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="SaveUserFunction" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ConverterLeft" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="ConverterTop" serializeAs="String">
+                <value>-1</value>
             </setting>
         </xFunc.Properties.Settings>
     </userSettings>
