--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 3.5).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 3.5).csproj
@@ -47,6 +47,7 @@
     <Compile Include="AreaConverter.cs" />
     <Compile Include="AreaUnits.cs" />
     <Compile Include="Converter.cs" />
+    <Compile Include="IConverter.cs" />
     <Compile Include="LengthConverter.cs" />
     <Compile Include="LengthUnits.cs" />
     <Compile Include="MassConverter.cs" />
