--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -171,6 +171,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.uk.resx</DependentUpon>
     </Compile>
+    <Compile Include="Results\BooleanResult.cs" />
     <Compile Include="Simplifier.cs" />
     <Compile Include="NumeralSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
