--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -83,6 +83,8 @@
     <Compile Include="Expressions\DelegateExpression.cs" />
     <Compile Include="Expressions\DifferentParametersExpression.cs" />
     <Compile Include="Expressions\ExpressionParameters.cs" />
+    <Compile Include="Expressions\ExpressionResultType.cs" />
+    <Compile Include="Expressions\ParameterTypeMismatchException.cs" />
     <Compile Include="IExpressionFactory.cs" />
     <Compile Include="InvalidResultException.cs" />
     <Compile Include="ExpressionFactory.cs" />
@@ -92,10 +94,11 @@
     <Compile Include="Expressions\AngleMeasurement.cs" />
     <Compile Include="Expressions\Define.cs" />
     <Compile Include="Expressions\BinaryExpression.cs" />
-    <Compile Include="Expressions\Bitwise\And.cs" />
-    <Compile Include="Expressions\Bitwise\Not.cs" />
-    <Compile Include="Expressions\Bitwise\Or.cs" />
-    <Compile Include="Expressions\Bitwise\XOr.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\And.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\Not.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\Or.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\XOr.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\Bool.cs" />
     <Compile Include="Expressions\Derivative.cs" />
     <Compile Include="Expressions\Div.cs" />
     <Compile Include="Expressions\Exp.cs" />
@@ -138,7 +141,6 @@
     <Compile Include="Expressions\Programming\MulAssign.cs" />
     <Compile Include="Expressions\Programming\DivAssign.cs" />
     <Compile Include="Expressions\Programming\And.cs" />
-    <Compile Include="Expressions\Programming\Bool.cs" />
     <Compile Include="Expressions\Programming\Equal.cs" />
     <Compile Include="Expressions\Programming\For.cs" />
     <Compile Include="Expressions\Programming\GreaterOrEqual.cs" />
@@ -209,6 +211,8 @@
     <Compile Include="Results\ExpressionResult.cs" />
     <Compile Include="Results\NumberResult.cs" />
     <Compile Include="Results\StringResult.cs" />
+    <Compile Include="Results\BooleanResult.cs" />
+    <Compile Include="Tokens\BooleanToken.cs" />
     <Compile Include="Tokens\Functions.cs" />
     <Compile Include="Tokens\FunctionToken.cs" />
     <Compile Include="Tokens\IToken.cs" />
