--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -99,6 +99,10 @@
     <Compile Include="Expressions\LogicalAndBitwise\Or.cs" />
     <Compile Include="Expressions\LogicalAndBitwise\XOr.cs" />
     <Compile Include="Expressions\LogicalAndBitwise\Bool.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\Equality.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\Implication.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\NAnd.cs" />
+    <Compile Include="Expressions\LogicalAndBitwise\NOr.cs" />
     <Compile Include="Expressions\Derivative.cs" />
     <Compile Include="Expressions\Div.cs" />
     <Compile Include="Expressions\Exp.cs" />
