--- a/xFunc/packages.config
+++ b/xFunc/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fluent.Ribbon" version="2.1.0-i" targetFramework="net40-Client" />
+  <package id="Fluent.Ribbon" version="3.4.2.173" targetFramework="net4-client" />
 </packages>
