--- a/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
@@ -50,15 +50,14 @@
     <Compile Include="Converters\MassTest.cs" />
     <Compile Include="Converters\PowerTest.cs" />
     <Compile Include="Converters\VolumeTest.cs" />
-    <Compile Include="Expressions\Logics\AndTest.cs" />
-    <Compile Include="Expressions\Logics\EqualityTest.cs" />
-    <Compile Include="Expressions\Logics\ImplicationTest.cs" />
-    <Compile Include="Expressions\Logics\NAndTest.cs" />
-    <Compile Include="Expressions\Logics\NOrTest.cs" />
-    <Compile Include="Expressions\Logics\NotTest.cs" />
-    <Compile Include="Expressions\Logics\OrTest.cs" />
-    <Compile Include="Expressions\Logics\UndefineTest.cs" />
-    <Compile Include="Expressions\Logics\XOrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\AndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\ImplicationTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NAndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NOrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NotTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\OrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\XOrTest.cs" />
     <Compile Include="Expressions\Maths\AbsTest.cs" />
     <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\EqualityTest.cs" />
