--- a/xFunc.Test/xFunc.Tests (Portable).csproj
+++ b/xFunc.Test/xFunc.Tests (Portable).csproj
@@ -52,15 +52,14 @@
     <Compile Include="Converters\MassTest.cs" />
     <Compile Include="Converters\PowerTest.cs" />
     <Compile Include="Converters\VolumeTest.cs" />
-    <Compile Include="Expressions\Logics\AndTest.cs" />
-    <Compile Include="Expressions\Logics\EqualityTest.cs" />
-    <Compile Include="Expressions\Logics\ImplicationTest.cs" />
-    <Compile Include="Expressions\Logics\NAndTest.cs" />
-    <Compile Include="Expressions\Logics\NOrTest.cs" />
-    <Compile Include="Expressions\Logics\NotTest.cs" />
-    <Compile Include="Expressions\Logics\OrTest.cs" />
-    <Compile Include="Expressions\Logics\UndefineTest.cs" />
-    <Compile Include="Expressions\Logics\XOrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\AndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\ImplicationTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NAndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NOrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NotTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\OrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\XOrTest.cs" />
     <Compile Include="Expressions\Maths\AbsTest.cs" />
     <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\EqualityTest.cs" />
@@ -136,21 +135,15 @@
     <Compile Include="Expressions\Maths\FloorTest.cs" />
     <Compile Include="Expressions\Maths\CeilTest.cs" />
     <Compile Include="Expressions\Maths\UserFunctionTest.cs" />
-    <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
     <Compile Include="MathParserTest.cs" />
-    <Compile Include="LogicParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathLexerTest.cs" />
-    <Compile Include="LogicLexerTest.cs" />
     <Compile Include="SimplifierTest.cs" />
     <Compile Include="MathParameterCollectionTest.cs" />
+    <Compile Include="DifferentiatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28Portable%29.csproj">
-      <Project>{83b0d9ff-8cd7-4bff-bac1-cba217106f67}</Project>
-      <Name>xFunc.Logics %28Portable%29</Name>
-    </ProjectReference>
     <ProjectReference Include="..\xFunc.Maths\xFunc.Maths %28Portable%29.csproj">
       <Project>{b3ebddb0-2f08-4ccc-bede-5f26f36b9602}</Project>
       <Name>xFunc.Maths %28Portable%29</Name>
