--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -109,6 +109,12 @@
             <setting name="ConverterTop" serializeAs="String">
                 <value>-1</value>
             </setting>
+            <setting name="OutputFormat" serializeAs="String">
+                <value>Auto</value>
+            </setting>
+            <setting name="SaveDump" serializeAs="String">
+                <value>False</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
